--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ span{
     }
     .main-loging-from{
         width:100%;
-        height: auto;
+        height: 600px;
         padding: 0;
     }
     .emai,
