--- a/bank.css
+++ b/bank.css
@@ -1,6 +1,6 @@
 
 header{
-    background-color: rgb(153, 238, 174);
+    background-color: rgb(246, 176, 248);
     height: 90vh;
     width: 85%;
     margin: auto;
@@ -11,7 +11,7 @@ header{
 }
 span{
     font-weight: 100px;
-    color:#fd1e01
+    color:#ff03dd
 }
 .main-monet-contener{
     display: flex;
@@ -19,7 +19,7 @@ span{
     gap: 20px;
 }
 .money{
-    background-color: rgb(0, 150, 40);
+    background-color: rgb(233, 32, 173);
     width: 300px;
     height: 150px;
     text-align: center;
@@ -43,13 +43,13 @@ span{
     margin-top: 50px;
 }
 .count-div{
-    background-image: linear-gradient(#174121,#60b486,#025316);
+    background-image: linear-gradient(#fa3ed1,#e99ed9,#f143f7);
     height:200px ;
     width: 350px;
     text-align: center;
     color: aliceblue;
     border-radius: 15px;
-    border-left: 13px solid #00330d;
+    border-left: 13px solid #33002a;
 }
 .count-div h2{
     font-size:30px;
@@ -70,8 +70,8 @@ span{
     width: 100px;
     border: none;
     border-radius: 10px;
-    background-color: rgb(1, 250, 35);
-    color: rgb(3, 3, 3);
+    background-color: rgb(255, 1, 200);
+    color: rgb(243, 238, 238);
     margin-top: 15px;
     justify-content: left;
     font-weight: bold;
